--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'io.coil-kt:coil:2.2.2'
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
